--- a/cosys2011.tex
+++ b/cosys2011.tex
@@ -54,7 +54,7 @@
 \Mycomment{les encadr\'es comme celui-ci sont produits avec une
   commande \verb:comment:, son but est d'inclure des commentaires pour les
   co-auteurs du document.  Ils doivent dispara\^{\i}tre dans la version finale
-  du document.}
+  du document. Tous commentaires bienvenus!}
 
 %===========================================================
 \masection{R\'esum\'e de la proposition}{Executive summary}\label{sec:intro}
