update of the template -- by JMB

--- a/cosys2011.tex
+++ b/cosys2011.tex
@@ -71,7 +71,7 @@
 %===========================================================
 \masection{Programme scientifique et technique, organisation du projet}{Scientific and technical programme, Project organisation}\label{sec:organisation}
 %===========================================================
-%\input{}
+\input{organisation}
 %===========================================================
 
 %===========================================================
