add README -- by JMB

--- a/cosys2011.tex
+++ b/cosys2011.tex
@@ -75,7 +75,7 @@
 %===========================================================
 
 %===========================================================
-\masection{Stratégie de valorisation, de protection et d?exploitation des résultats }{Dissemination and exploitation of results. intellectual property}\label{sec:valo}
+\masection{Stratégie de valorisation, de protection et d'exploitation des résultats }{Dissemination and exploitation of results. Intellectual property}\label{sec:valo}
 %===========================================================
 \input{.tex}
 %===========================================================
