--- a/contexte.tex
+++ b/contexte.tex
@@ -1,6 +1,6 @@
 \Mycomment{A titre indicatif : de 5 à 10 pages pour ce chapitre.
 
-Présentation générale du problème qu?il est proposé de traiter dans le projet et du cadre de travail (recherche fondamentale, industrielle ou développement expérimental).}
+Présentation générale du problème qu'il est proposé de traiter dans le projet et du cadre de travail (recherche fondamentale, industrielle ou développement expérimental).}
 
 \masubsection{Contexte et enjeux économiques et sociétaux}{Context, social and economic issues}\label{sec:enjeuxEco}
 \input{enjeux}
