--- a/cosys2011.tex
+++ b/cosys2011.tex
@@ -71,35 +71,47 @@
 %===========================================================
 \masection{Programme scientifique et technique, organisation du projet}{Scientific and technical programme, Project organisation}\label{sec:organisation}
 %===========================================================
-\input{organisation}
+%\input{}
 %===========================================================
 
 %===========================================================
 \masection{Stratégie de valorisation, de protection et d'exploitation des résultats }{Dissemination and exploitation of results. Intellectual property}\label{sec:valo}
 %===========================================================
-\input{.tex}
+\input{valo.tex}
 %===========================================================
 
 %===========================================================
 \masection{Description du partenariat }{Consortium description }\label{sec:consortium}
 %===========================================================
-\input{.tex}
+\input{consortium}
 %===========================================================
 
 %===========================================================
 \masection{Justification scientifique des moyens demandés}{Scientific justification of requested ressources}\label{sec:moyens}
 %===========================================================
-\input{.tex}
+\Mycomment{On présentera ici la justification scientifique et technique des moyens demandés dans le document de soumission  par chaque partenaire et synthétisés à l?échelle du projet dans la fiche ``Tableaux récapitulatifs" du document administratif et financier (dit document de soumission) tel que rempli en ligne sur le site de soumission.
+
+Chaque partenaire justifiera les moyens qu'il demande en distinguant les différents postes de dépenses.
+(Maximum 2 pages par partenaire)
+}
+%\masubsection{LIFC}{LIFC}\input{demande-LIFC.tex}
+%\masubsection{LISI}{LISI}\input{demande-LISI.tex}
+%\masubsection{IRIT}{IRIT}\input{demande-IRIT.tex}
+\masubsection{...}{...}\input{demande-XXX.tex}
+
 %===========================================================
 
 %===========================================================
 \masection{Annexes}{Annexes}\label{sec:annexes}
 %===========================================================
-\input{.tex}
-%===========================================================
+
+\masubsection{Références bibliographiques }{References}\label{sec:refs}
 
 \bibliographystyle{alpha}
 %\bibliography{cosys}
 % ficher .bib a fournir!
+
+\masubsection{Biographies}{CV / Resume}\label{sec:bio}
+\masubsection{Implication des personnes dans d?autres contrats}{Staff involvement in other contracts}\label{sec:implication} 
 
 \end{document}
