--- a/contexte.tex
+++ b/contexte.tex
@@ -9,7 +9,7 @@ Présentation générale du problème qu'il est proposé de traiter dans le projet et
 \input{positionnement}
 
 \masubsection{État de l'art}{State of the art}\label{sec:etat}
-%\input{}
+\input{etatdelart}
 
 \masubsection{Objectifs et caractère ambitieux/novateur du projet }{Objectives, originality and novelty of the project}\label{sec:objectifs}
-%\input{}
+\input{objectifs}
