--- a/cosys2011.tex
+++ b/cosys2011.tex
@@ -51,10 +51,15 @@
 ~\\\vspace{1cm}
 \tableofcontents
 %===========================================================
-\Mycomment{les encadr\'es comme celui-ci sont produits avec une
-  commande \verb:comment:, son but est d'inclure des commentaires pour les
-  co-auteurs du document.  Ils doivent dispara\^{\i}tre dans la version finale
-  du document. Tous commentaires bienvenus!}
+\Mycomment{
+Avant de soumettre ce document :
+\begin{itemize}
+\item   Supprimer tous les commentaires en remplaçant la commande \verb:Mycomment:
+\item   Mettre la table des matières à jour (double compilation). 
+\item   Donner toutes les références bibliographiques en annexe (cf. \masec{refs}).
+\item   Ce document, hors annexes, ne doit pas dépasser 40 pages, corps de texte en police de taille 11. \underline{Ce point constitue un critère de recevabilité de la proposition de projet}.
+\end{itemize}
+}
 
 %===========================================================
 \masection{R\'esum\'e de la proposition}{Executive summary}\label{sec:intro}
@@ -69,9 +74,11 @@
 %===========================================================
 
 %===========================================================
-\masection{Programme scientifique et technique, organisation du projet}{Scientific and technical programme, Project organisation}\label{sec:organisation}
+\masection{Programme scientifique et technique, organisation du projet}{Scientific and technical program, Project organisation}\label{sec:organisation}
 %===========================================================
-%\input{}
+
+\Mycomment{A titre indicatif : de 8 à 12 pages pour ce chapitre, en fonction du nombre de tâches.}
+\input{organisation}
 %===========================================================
 
 %===========================================================
@@ -89,14 +96,14 @@
 %===========================================================
 \masection{Justification scientifique des moyens demandés}{Scientific justification of requested ressources}\label{sec:moyens}
 %===========================================================
-\Mycomment{On présentera ici la justification scientifique et technique des moyens demandés dans le document de soumission  par chaque partenaire et synthétisés à l?échelle du projet dans la fiche ``Tableaux récapitulatifs" du document administratif et financier (dit document de soumission) tel que rempli en ligne sur le site de soumission.
+\Mycomment{On présentera ici la justification scientifique et technique des moyens demandés dans le document de soumission  par chaque partenaire et synthétisés à l'échelle du projet dans la fiche ``Tableaux récapitulatifs" du document administratif et financier (dit document de soumission) tel que rempli en ligne sur le site de soumission.
 
 Chaque partenaire justifiera les moyens qu'il demande en distinguant les différents postes de dépenses.
 (Maximum 2 pages par partenaire)
 }
 %\masubsection{LIFC}{LIFC}\input{demande-LIFC.tex}
 %\masubsection{LISI}{LISI}\input{demande-LISI.tex}
-%\masubsection{IRIT}{IRIT}\input{demande-IRIT.tex}
+\masubsection{IRIT}{IRIT}\input{demande-IRIT.tex}
 \masubsection{...}{...}\input{demande-XXX.tex}
 
 %===========================================================
@@ -112,6 +119,6 @@ Chaque partenaire justifiera les moyens qu'il demande en distinguant les différe
 % ficher .bib a fournir!
 
 \masubsection{Biographies}{CV / Resume}\label{sec:bio}
-\masubsection{Implication des personnes dans d?autres contrats}{Staff involvement in other contracts}\label{sec:implication} 
+\masubsection{Implication des personnes dans d'autres contrats}{Staff involvement in other contracts}\label{sec:implication} 
 
 \end{document}
