--- a/consortium.tex
+++ b/consortium.tex
@@ -8,9 +8,33 @@ Décrire brièvement chaque partenaire et fournir ici les éléments permettant d'ap
 Montrer la complémentarité et la valeur ajoutée des coopérations entre les différents partenaires. L'interdisciplinarité et l'ouverture à diverses collaborations seront à justifier en accord avec les orientations du projet. (1 page maximum)
 }
 
-\subsubsection{LIFC}%\input{}
-\subsubsection{LISI}%\input{}
-\subsubsection{IRIT}%\input{}
+%===========================================================
+\begin{center}\begin{minipage}[h]{\textwidth}\begin{center}
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+\hline  & \PartnOne & \PartnTwo & \PartnThree & \PartnFour & \PartnFive & \PartnSix & \PartnSeven \\ 
+\hline 
+\hline \PartnOne &  &  &  & X & X &  &  \\ 
+\hline \PartnTwo &  &  &  &  &  &  &  \\ 
+\hline \PartnThree &  &  &  &  & X &  &  \\ 
+\hline \PartnFour &  &  &  &  & X &  & \\ 
+\hline \PartnFive &  &  &  &  &  & X & \\ 
+\hline \PartnSix &  &  &  &  &  &  &  \\ 
+\hline \PartnSeven &  &  &  &  &  &  &  \\ 
+\hline %=====================================================
+\end{tabular}\end{center}\end{minipage}\end{center}
+%===========================================================
+
+
+\subsubsection{INESS}
+\input{INESS}
+\subsubsection{FEMTO-ST}
+\input{FEMTO}
+\subsubsection{LIFC}
+\input{LIFC}
+\subsubsection{LISI}
+\input{LISI}
+\subsubsection{IRIT}
+\input{IRIT}
 \subsubsection{...}%\input{}
 
 \masubsection{Qualification du coordinateur du projet }{Qualification of the project coordinator}\label{sec:coord}
@@ -23,27 +47,29 @@ Qualifier les personnes, préciser leurs activités principales  et leurs compéten
 }
 
 %===========================================================
-%\begin{center}\begin{minipage}[h]{\textwidth}\begin{center}
+\begin{center}\begin{minipage}[h]{\textwidth}\begin{center}
 %\begin{tabular}{|p{18mm}|p{25mm}|r|p{15mm}|p{50mm}|p{50mm}}
-%\begin{tabular}{|l|l|l|l|l|l|l|}}
-%\hline %=====================================================
-%\hline 
-%\monlabel{Partenaire}{Partner} &
-%\monlabel{Nom}{Name} &
-%\monlabel{Prénom }{ First name } &
-%\monlabel{Emploi actuel  }{ Position } &
-%\monlabel{Discipline }{ Field of research } &
-%PM\footnote{blabla} & 
-%\monlabel{Rôle}{Contribution} \\
+\begin{tabular}{|l|l|l|l|l|l|l|}
+\hline %=====================================================
+\monlabel{Partenaire}{Partner} &
+\monlabel{Nom}{Name} &
+\monlabel{Prénom }{First name} &
+\monlabel{Emploi actuel}{Position} &
+\monlabel{Discipline }{Research Field} &
+PM\footnote{\monlabel{Personne.mois sur la durée du projet.}{People.month for the project duration}}  & 
+\monlabel{Rôle}{Contribution} \\
 % & & & & & & 4 lignes max  \\ 
+\hline 
+
+\hline \lifc & Bouquet & F. & Professor &  &  &  \\ 
+\hline \irit & Bruel & J.-M. & Professor & MDE/SysML & 12 & Project Leader \\ 
+\hline \irit & Iulian & O. & MC (HDR) & V\&V & 9 & SysML validation \\ 
+\hline \irit & Hameg & S. & Ph.D. & CoSimulation & 9 & Simulation \\ 
+\hline \ldots & \ldots & \ldots & \ldots & \ldots & \ldots & \ldots \\ 
+%\hline  &  &  &  &  &  &  \\ 
 %\hline 
-%\hline IRIT & Bruel & J.-M. & Professor & Soft. Eng. & IDM/SysML & Project Leader \\ 
-%\hline  &  &  &  &  &  &  \\ 
-%\hline  &  &  &  &  &  &  \\ 
-%\hline  &  &  &  &  &  &  \\ 
-%\hline 
-%\hline %=====================================================
-%\end{tabular}\end{center}\end{minipage}\end{center}
+\hline %=====================================================
+\end{tabular}\end{center}\end{minipage}\end{center}
 %===========================================================
 
 \Mycomment{Pour chacune des personnes dont l'implication dans le projet est supérieure 
