--- a/contexte.tex
+++ b/contexte.tex
@@ -3,9 +3,11 @@
 Présentation générale du problème qu'il est proposé de traiter dans le projet et du cadre de travail (recherche fondamentale, industrielle ou développement expérimental).}
 
 \masubsection{Contexte et enjeux économiques et sociétaux}{Context, social and economic issues}\label{sec:enjeuxEco}
+\redac{SMA+??}
 \input{enjeux}
 
 \masubsection{Positionnement du projet}{Position of the project}\label{sec:position}
+\redac{ALL}
 \input{positionnement}
 
 \masubsection{État de l'art}{State of the art}\label{sec:etat}
