--- a/etatdelart.tex
+++ b/etatdelart.tex
@@ -3,3 +3,25 @@ Faire apparaître d'éventuelles contributions des partenaires de la proposition d
 Faire apparaître d'éventuels résultats préliminaires. 
 Inclure les références bibliographiques nécessaires en annexe (cf. \masec{refs}).
 }
+
+\subsubsection{Modélisation/outils pour le Matériel et logiciel et choix SysML}
+\redac{IRIT, LIFC}
+\vspace{1cm}
+\subsubsection{Vérification des modèles SysML}
+\redac{IRIT}
+\vspace{1cm}
+\subsubsection{Ingénierie des exigences et leurs transformations}
+\redac{???}
+\vspace{1cm}
+\subsubsection{Transformation de modèle vers modèle matériel}
+\redac{LISI, LIFC}
+\vspace{1cm}
+\subsubsection{Modélisation/outils pour expliquer le choix de VHDL-AMS et/ou Verilog et/ou SystemC et/ou ROSETTA}
+\redac{INESS, FEMTO-ST}
+\vspace{1cm}
+\subsubsection{Vérification de propriétés matérielles choix PSL et/ou autres}
+\redac{IRIT, LIFC, INESS}
+\vspace{1cm}
+\subsubsection{Génération de Tests}
+\redac{LIFC}
+\vspace{1cm}
