--- a/objectifs.tex
+++ b/objectifs.tex
@@ -1,3 +1,5 @@
 \Mycomment{Décrire les \textbf{objectifs} du projet et détailler les verrous scientifiques et techniques à lever par la réalisation du projet. Insister sur le caractère ambitieux et/ou novateur de la proposition.
 Décrire éventuellement \textbf{le} ou \textbf{les produits finaux développés}, présenter les résultats escomptés en proposant si possible des critères de réussite et d?évaluation adaptés au type de projet, permettant d?évaluer les résultats en fin de projet.
 }
+
+Chaque partenaire propose 2 à 3 verrous scientifiques qu'il souhaite adresser dans le projet.
