--- a/positionnement.tex
+++ b/positionnement.tex
@@ -6,3 +6,20 @@
 \item	positionnement du projet aux niveaux européen et international.
 \end{itemize}
 }
+
+\subsubsection{Les contributions du projet (à discuter)}
+
+\begin{itemize}
+\item 	Apport méthodologique combinant validation, vérification et simulation
+\item 	Génération de test à partir de modèles SysML
+\item 	Formalisation et vérification de propriétés fonctionnelles et non-fonctionnelles sur des modèles SysML
+\item 	Formalisation et vérification de propriétés sur des modèles Hardware
+\item 	Traçabilité entre besoins SysML et Hardware  
+\end{itemize}
+
+\subsubsection{Impact  sur les études}
+
+\begin{enumerate}
+\item 	réduction  de la consommation d'énergie pour fournir une réponse économique et  une grande stabilité pour des grandes vitesses (contribuer à l'environnement).
+\item Deux exemples connus dans ce domaine : réduction de la traînée aérodynamique pour le corps d'Ahmed et  les trains à grande vitesse dans un tunnel de Bombardier.
+\end{enumerate}
