--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,6 @@
 \Mycomment{Recopier le résumé utilisé dans le document administratif et financier (dit document de soumission)}
 
 Ce projet a pour objectif la mise en \oe{}uvre  d'une méthodologie sûre de conception de systèmes complexes qui interagissent continuellement avec leurs environnements. Ces systèmes sont de grande taille et mettent en \oe{}uvre des quantités de variables et d'équations physiques qui le rendent difficilement appréhendables. Leurs  réalisations combinent les deux aspects matériel et logiciel. De son caractère pluridisplinaire, il fait appel à des compétences de différents domaines comme l'informatique et l'électronique.  Notre proposition permet de confronter la modélisation de ces systèmes et le système réel physique  à implanter. Elle est basée sur la combinaison des différentes techniques complémentaires de vérification, de validation et de simulation. Elle permettra de fiabiliser le processus de fabrication et diminuer le temps de simulation (des électroniciens) qui peut être exorbitant.
+
+Une version électronique de ce document est disponible \`a
+l'URL\,:~\url{http://xxx.xxx/CoSys2011.pdf}.
