--- a/valo.tex
+++ b/valo.tex
@@ -1,3 +1,4 @@
+\redac{LISI/SMA/??}
 \Mycomment{A titre indicatif : 2 pages pour ce chapitre.
 Présenter les stratégies de valorisation des résultats :
 \begin{itemize}
